# rp-gssm

./: .gitignore  README.md  pyproject.toml
dataloader/: data_utils.py  dataloader_monkey.py  dataloader_mouse.py  prep_data.py
decoding/: __init__.py  linear.py  nonlinear.py  utils.py
demos/: cifar_pendulum.ipynb  walker_dynamic_distractors.ipynb
rp_ssm/: actions.py  config.py  datasets.py  datasets_utils.py  distmaps.py  dists.py  dists_utils.py  generation.py  gym_wrappers.py  recognition.py  rpm.py  training.py  types.py  utils.py
