[project]
name = "rp-ssm"
version = "0.1.0"
requires-python = "==3.10.*"
description = "Package implementing the RP-GSSM"
authors = [
    {name = "Samo Hromadka", email = "samo.hromadka@gmail.com"},
    {name = "Kai Biegun", email = "k.biegun@hotmail.co.uk"}
]

dependencies = [
    "flax>=0.10.1",
    "wandb>=0.18.7",
    "matplotlib>=3.9.2",
    "tensorflow-probability>=0.25.0",
    "tqdm>=4.67.0",
    "optax>=0.2.4",
    "numpy>=1.26.4",
    "dynamax>=0.1.5",
    "jupyter>=1.1.1",
    "orbax-checkpoint",
    "jaxtyping",
    "chex",
    "einops",
    "scikit-learn==1.3.2",
    "ratinabox>=1.15.2",
    "gymnax>=0.0.8",
    "distrax>=0.1.5",
    "pip-tools>=7.4.1",
    "gym[classic_control]>=0.26.2",
    "opencv-python>=4.11.0.86",
    "dm-haiku>=0.0.13",
    "mypy>=1.15.0",
    "dacite>=1.9.2",
]

readme = "README.md"
license = {text = "CC BY-NC 4.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
cuda = ["jax[cuda12_pip]==0.4.35", "nvidia-cuda-nvcc-cu12"]
cpu = ["jax[cpu]==0.4.35"]

[tool.pdm]
distribution = true

[[tool.pdm.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
verify_ssl = true
type = "find_links"